# Hephaestos

./: .gitignore  CLI.hs  Comics.hs  Crawlers.hs  Debug.hs  Fetch.hs  Hephaestos.hs  Main.hs  README.md  XPath.hs  _config.yml  docs.html  hephaestos.cabal  index.html
Comics/: CyanideAndHappiness.hs  LinearComic.hs  List.hs  PennyArcade.hs  XKCD.hs
Control/Concurrent/STM/: Utils.hs
Crawlers/: Examples.hs
Crawlers/Linear/: Load.hs
Crawling/Hephaestos/: CLI.hs  Crawlers.hs  Fetch.hs  I18N.hs  Internationalization.hs  Metadata.hs  Transform.hs  XPath.hs
Crawling/Hephaestos/CLI/: Color.hs  Config.hs  Errors.hs  Format.hs  Status.hs
Crawling/Hephaestos/Crawlers/: Examples.hs  Library.hs  Templates.hs  Utils.hs
Crawling/Hephaestos/Crawlers/Linear/: Load.hs
Crawling/Hephaestos/Fetch/: ErrorHandling.hs  Forest.hs  Job.hs  Successor.hs  Transform.hs  Tree.hs  Types.hs
Crawling/Hephaestos/Fetch/Types/: Errors.hs  General.hs  Metadata.hs  RequestConfig.hs  Successor.hs
Crawling/Hephaestos/Helper/: Functor.hs  String.hs
Data/Collections/: BulkInsertable.hs  Instances.hs
Data/Either/: Optional.hs
Data/Functor/: FunctorM.hs  Monadic.hs
Data/List/: Maybe.hs  Safe.hs
Data/String/: IO.hs
Data/Tree/: Monadic.hs
Data/Types/: Injective.hs  Isomorphic.hs
Fetch/: ErrorHandling.hs  Iterating.hs  Job.hs  Mapping.hs  Tree.hs  Types.hs
Fetch/Types/: Successor.hs
Filesystem/Path/: CurrentOS'.hs
Galleries/: Linear.hs  List.hs  Retrieval.hs  Simple.hs  Tree.hs
Helper/: String.hs
Numeric/: Peano.hs
System/: REPL.hs
System/Directory/: Generic.hs
System/FilePath/: Generic.hs
System/FilePath/Posix/: Generic.hs  Text.hs
System/REPL/: Command.hs  State.hs
System/REPL/Command/: Helper.hs  Nat.hs
_layouts/: architect.html  architect_index.html
_site/: docs.html  index.html  params.json
_site/Crawling/Hephaestos/Crawlers/Test/: Porn.hs
_site/writing-a-crawler/: index.html
assets/themes/architect/stylesheets/: stylesheet.css
lang/: en.msg
scripts/: XKCD.txt  cyanideAndHappiness.txt  pennyArcade.txt  talkShoe.txt
writing-a-crawler/: index.md
