name:                hephaestos
version:             1.2.0.0
synopsis:            Crawler framework
description:         Hephaestos is a framework for writing rich, robust crawlers for
                     websites. A crawler just a function that takes a URL and
                     the XML tree of a website and then extracts arbitrary information
                     from it. The rest of the program takes care of running crawlers,
                     downloading files, collecting errors, and re-trying failed
                     crawls. It is intended as a library, but comes with a minimalistic CLI.

                     NOTE: Because the "Network.URI" namespace was moved into its
                     own package starting with version of 2.6 of @network@, the
                     installation of the @hxt@ package might fail. In that case,
                     install hxt separately with the @network-uri@ flag.

                     NOTE: Since some dependencies have restrictive upper bounds on
                     mtl and text, conflicts might arise. If that should happen,
                     try the @--allow-newer@ flag:

                     > cabal install --allow-newer=mtl,text Hephaestos
homepage:            https://github.com/jtapolczai/Hephaestos/
license:             Apache-2.0
license-file:        LICENSE.md
author:              Janos Tapolczai
maintainer:          janos.tapolczai@gmail.com
category:            Crawler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jtapolczai/Hephaestos.git

executable hephaestos
  main-is:             Main.hs

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    ScopedTypeVariables, OverloadedStrings, FlexibleContexts, DeriveDataTypeable, LambdaCase, TupleSections, MultiParamTypeClasses, FlexibleInstances, TypeFamilies, PolyKinds, ConstraintKinds, DataKinds, KindSignatures, TemplateHaskell

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8, mtl >=2.2, containers >=0.5, text >=1.2, http-conduit >=2.1, http-client >=0.4, directory >=1.2, void >=0.6, monad-loops >=0.4, filepath >=1.3, bytestring >=0.10, exceptions >=0.6, collections-api >=1.0, utf8-string >=0.3, hxt-xpath >=9.1.2.1, hxt >=9.3.1.10, foldl >=1.0, binary >=0.7, split >=0.2, uuid >=1.3, network >=2.6, network-uri >= 2.6, aeson >=0.8.0.2, ansi-terminal >=0.6, http-types >=0.8, unordered-containers >=0.2, case-insensitive >=1.2, listsafe >= 0.1, functor-monadic >= 0.1, numericpeano >= 0.2, repl-toolkit >= 0.2, type-iso >= 0.1, either >= 3.4.2, data-default >= 0.5.3, ListLike >= 4.1.0, lens >= 4.7, pretty >= 1.1.2

  -- Base language which the package is written in.
  default-language:    Haskell2010

